Implement render tree conversion, layout refinements, and painting updates
- Introduced `RenderTreeBuilder` for converting DOM to an immutable render tree.
- Added `RenderStyle`, `RenderBox`, and `RenderTextRun` to represent resolved styles and structure.
- Replaced ad-hoc layout logic in `DomViewPanel` with `RenderLayoutEngine` for reflow and paint fragment generation.
- Refactored `DomViewPanelTest` with additional tests for nested styles, text fragments, box geometry, and block backgrounds.
- Added `RenderTreeBuilderTest` to validate render tree generation for block hierarchy and inline styles.
- Enhanced style resolution, box model implementation, and `StyleApplicatorTest` for CSS expansion.
- Introduced tests for render logic and improved painting with background, borders, and styled text.